// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

/***
cd $GOPATH/src/github.com/v2ray.com/core/p2p
protoc -I=wire/ -I=/Users/geeker/workspace/golang/src -I=/Users/geeker/workspace/golang/src/github.com/gogo/protobuf/protobuf wire/notifier.proto --go_out=plugins=grpc:wire
***/
syntax = "proto3";

/*option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "HelloWorldProto";*/

package wire;

import "github.com/gogo/protobuf/gogoproto/gogo.proto";
import "v2ray.com/core/app/p2p/wire/seedlist.proto";

/*
option (gogoproto.gostring_all) = true;
option (gogoproto.goproto_stringer_all) = false;
option (gogoproto.stringer_all) =  true;
option (gogoproto.marshaler_all) = true;
option (gogoproto.sizer_all) = true;
option (gogoproto.unmarshaler_all) = true;

option (gogoproto.equal_all) = true;
option (gogoproto.populate_all) = true;
*/

// The notify service definition.
service Notifier {
    // Sends a greeting
    rpc SayHello (HelloSeedList) returns (HelloReply) {}
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
}

// The response message containing the greetings
message HelloReply {
  string message = 1;
}
